--- a/nexus.yml
+++ b/nexus.yml
@@ -10,7 +10,7 @@
     nexus_admin_password: admin123
     nexus_data_dir: /usr/local/nexus/nexus-3.21.1-01
     nexus_api_scheme: http
-    nexus_api_hostname: '{{ nexus_url }}'
+    nexus_api_hostname: '{{ target }}'
     nexus_api_port: 8081
     nexus_api_context_path: '/'
     nexus_default_admin_password: 6f518a87-a90f-40f3-b372-0877190ebb17
