--- a/nexus.yml
+++ b/nexus.yml
@@ -43,7 +43,7 @@
      
   - name : Unzip the nexus file
     unarchive:
-      src: /usr/local/nexus-3.21.1-01-unix.tar.qz
+      src: /usr/local/nexus-3.21.1-01-unix.tar.gz
       dest: /usr/local
       remote_src: yes
     
